add: verifier support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["fr32", "hashers", "proofs-core", "proofs-porep", "sha2raw"]
+members = ["fr32", "hashers", "proofs-core", "proofs-porep", "sha2raw", "exps"]
