--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["fr32", "hashers", "proofs-core", "proofs-porep", "sha2raw", "exps"]
+members = ["fr32", "hashers", "proofs-core", "proofs-porep", "sha2raw", "contract-auxiliaries", "exps", "converter"]
