--- a/proofs-core/Cargo.toml
+++ b/proofs-core/Cargo.toml
@@ -27,6 +27,7 @@ ff = "0.12.0"
 bellperson = "0.24.0"
 serde_json = "1.0"
 log = "0.4.7"
+getrandom = {version = "0.2.8", features = ["js"]}
 rand_chacha = "0.3"
 generic-array = "0.14.4"
 anyhow = "1.0.23"
