--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,15 @@
 [workspace]
 members = ["contract-auxiliaries", "contract"]
+resolver = "2"
+
+
+[profile.release]
+opt-level = 3
+debug = false
+debug-assertions = false
+codegen-units = 1
+incremental = false
+rpath = false
+lto = true
+overflow-checks = true
+panic = 'abort'
